# python-project-50

./: .coverage  .coveragerc  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: my-tests.yml
gendiff/: cli.py  differ.py  differ_engine.py  gendiff.py  loader.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: arg_parser.py  cli.py  gendiff.py
tests/: changed_data.json  conftest.py  original_data.json  test_generate_diff.py  test_generate_diff_json.py  test_generate_diff_plain.py  test_generate_diff_stylish.py
tests/fixtures/: changed_data.yml  different_types_data.json  expected_diff_identical_files.txt  expected_diff_original_changed.txt  expected_diff_removed_data.txt  original_data.yaml
tests/fixtures/json/: expected_diff_nested.txt
tests/fixtures/json_exp/: expected_diff_added_data.txt  expected_diff_nested.txt  expected_diff_original_changed.txt  expected_diff_removed_data.txt
tests/fixtures/plain_exp/: expected_diff_removed_data.txt
tests/fixtures/stylish/: expected_diff_identical_files.txt
tests/fixtures/stylish_exp/: expected_diff_different_types.txt  expected_diff_identical_files.txt  expected_diff_nested.txt  expected_diff_original_changed.txt  expected_diff_removed_data.txt
